@@ -25,8 +25,6 @@
 
 package io.github.mzmine.util;
 
-import static io.github.mzmine.util.annotations.CompoundAnnotationUtils.getTypeValue;
-
 import com.google.common.collect.Range;
 import io.github.mzmine.datamodel.DataPoint;
 import io.github.mzmine.datamodel.FeatureIdentity;
@@ -63,7 +61,9 @@ import io.github.mzmine.datamodel.identities.iontype.IonType;
 import io.github.mzmine.datamodel.impl.SimpleDataPoint;
 import io.github.mzmine.datamodel.msms.DDAMsMsInfo;
 import io.github.mzmine.main.MZmineCore;
+import io.github.mzmine.modules.dataprocessing.id_formulaprediction.ResultFormula;
 import io.github.mzmine.util.annotations.CompoundAnnotationUtils;
+import static io.github.mzmine.util.annotations.CompoundAnnotationUtils.getTypeValue;
 import io.github.mzmine.util.scans.ScanUtils;
 import io.github.mzmine.util.spectraldb.entry.SpectralDBAnnotation;
 import java.text.Format;
@@ -176,6 +176,7 @@ public class FeatureUtils {
    *
    * @return True if identities match between rows
    */
+  @Deprecated
   public static boolean compareIdentities(FeatureListRow row1, FeatureListRow row2) {
 
     if ((row1 == null) || (row2 == null)) {
@@ -517,9 +518,10 @@ public class FeatureUtils {
     return compoundAnnotations;
   }
 
-  public static boolean isImsFeature(Feature f) {
-    return f.getRawDataFile() instanceof IMSRawDataFile
-           && f.getFeatureData() instanceof IonMobilogramTimeSeries;
+  public static boolean isImsFeature(@Nullable Feature f) {
+
+    return f != null && f.getRawDataFile() instanceof IMSRawDataFile
+        && f.getFeatureData() instanceof IonMobilogramTimeSeries;
   }
 
   /**
@@ -767,7 +769,6 @@ public class FeatureUtils {
   }
 
   public static List<IonType> extractAllIonTypes(FeatureListRow row) {
-
     final List<IonType> allIonTypes = Arrays.stream(FeatureAnnotationPriority.values())
         .flatMap(type -> {
           final Object o = row.get(type.getAnnotationType());
@@ -775,13 +776,20 @@ public class FeatureUtils {
             return Stream.empty();
           }
           return switch (type) {
-            case MANUAL, FORMULA, LIPID -> Stream.empty();
+            case MANUAL, LIPID, FORMULA -> Stream.empty();
             case SPECTRAL_LIBRARY, EXACT_COMPOUND -> {
               List<FeatureAnnotation> featureAnnotations = (List<FeatureAnnotation>) annotations;
               yield featureAnnotations.stream().map(FeatureAnnotation::getAdductType);
             }
           };
-        }).toList();
+        }).filter(Objects::nonNull).collect(Collectors.toList());
+
+    if(row.getBestIonIdentity() != null) {
+      final IonType ionType = row.getBestIonIdentity().getIonType();
+      final List<IonType> combined = new ArrayList<>(allIonTypes);
+      combined.add(ionType);
+      return combined;
+    }
 
     return allIonTypes;
   }
@@ -845,5 +853,12 @@ public class FeatureUtils {
       }
     }
     return Optional.empty();
+  }
+
+  /**
+   * Checks if this feature has MRM data (and is not null).
+   */
+  public static boolean isMrm(@Nullable Feature f) {
+    return f instanceof ModularFeature mf && mf.isMrm();
   }
 }
